--- a/requirements/environment.yml
+++ b/requirements/environment.yml
@@ -12,3 +12,5 @@ dependencies:
       - pyspellchecker==0.6.3
       - gensim==4.2.0
       - nltk==3.7
+      - spacy==3.3.0
+      - pyLDAvis==3.3.1
